# mathmagician

./: CMakeLists.txt  README.md  calc.cpp  calc2post.cpp  calc2sexpr.cpp  evaluate-expr.cpp  evaluate-expr.hpp  expr.hpp  file.cpp  file.hpp  lexer.cpp  lexer.hpp  parse-expr.cpp  parse-expr.hpp  parse.cpp  parse.hpp  postfix.cpp  prelude.hpp  print.cpp  print.hpp  sexpr.cpp  sexpr.hpp  test-postfix.sh  token.cpp  token.hpp
calc/: CMakeLists.txt  evaluate-expr.cpp  expr.hpp  file.cpp  lexer.cpp  lexer.hpp  parse-expr.cpp  parse-expr.hpp  parse.hpp  postfix.cpp  postfix.hpp  prelude.hpp  sexpr.cpp  sexpr.hpp  test-eval.sh  test-parse.sh  test-sexpr.sh  token.cpp  token.hpp
calc/cases/: case10.txt  case2.txt  case5.txt  case6.txt  case8.txt  case9.txt  double1.txt  double2.txt  double3.txt  double4.txt  double5.txt  err10.txt  err11.txt  err5.txt  err6.txt  err7.txt  err8.txt  err9.txt  err_double2.txt  err_double3.txt  neg4.txt  neg5.txt
calc/test/: test-postfix.cpp  test-print.cpp  test-sexpr.cpp
calc2/: CMakeLists.txt  README.md  calc.cpp  evaluate-expr.cpp  evaluate-expr.hpp  expr.hpp  file.cpp  file.hpp  lexer.cpp  parse-expr.cpp  parse-expr.hpp  parse.cpp  parse.hpp  prelude.hpp  print.cpp  print.hpp  symbol.cpp  symbol.hpp  test-eval.sh  test-lex.sh  token.cpp  token.hpp  type.cpp  type.hpp  utility.hpp  value.hpp
calc2/cases/: bool4.txt  bool5.txt  bool6.txt  bool8.txt  bool9.txt  case11.txt  cmp1.txt  cmp2.txt  cmp3.txt  cmp4.txt  cmp5.txt  cmp6.txt  err12.txt  err_double1.txt  neg3.txt  type_err2.txt  type_err4.txt  type_err5.txt  type_err7.txt
calc2/test/: CMakeLists.txt  test-eval.cpp  test-lex.cpp  test-parse.cpp  test-print.cpp
cases/: case1.txt  case4.txt  case8.txt  err2.txt  neg2.txt
test/: CMakeLists.txt  test-eval.cpp  test-lex.cpp  test-parse.cpp  test-print.cpp
